logs/WORLD_nightly.log
>>> 'Pkg.add("WORLD")' log

WARNING: deprecated syntax "[a=>b, ...]" at /home/idunning/pkgtest/.julia/v0.4/WORLD/deps/build.jl:30.
Use "Dict(a=>b, ...)" instead.
  % Total    % Received % Xferd  Average Speed   Time    Time     Time  Current
                                 Dload  Upload   Total   Spent    Left  Speed
  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0  0     0    0     0    0     0      0      0 --:--:-- --:--:-- --:--:--     0100   122    0   122    0     0   1288      0 --:--:-- --:--:-- --:--:--  1284
100  134k    0  134k    0     0   486k      0 --:--:-- --:--:-- --:--:--  486k
Waf: The wscript in '/home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src/WORLD-0.1.4_2_1' is unreadable
Traceback (most recent call last):
  File "/home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src/WORLD-0.1.4_2_1/.waf3-1.7.11-edc6ccb516c5e3f9b892efc9f53a610f/waflib/Scripting.py", line 87, in waf_entry_point
    set_main_module(Context.run_dir+os.sep+Context.WSCRIPT_FILE)
  File "/home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src/WORLD-0.1.4_2_1/.waf3-1.7.11-edc6ccb516c5e3f9b892efc9f53a610f/waflib/Scripting.py", line 112, in set_main_module
    Context.g_module=Context.load_module(file_path)
  File "/home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src/WORLD-0.1.4_2_1/.waf3-1.7.11-edc6ccb516c5e3f9b892efc9f53a610f/waflib/Context.py", line 281, in load_module
    exec(compile(code,path,'exec'),module.__dict__)
  File "/home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src/WORLD-0.1.4_2_1/wscript", line 42
    print """
world has been configured as follows:

[Build information]
Package:                 %s
build (compile on):      %s
host endian:             %s
Compiler:                %s
Compiler version:        %s
CXXFLAGS:                %s
""" % (
             
                                     

                   
                           
                           
                           
                           
                           
                           
  ^
SyntaxError: invalid syntax
INFO: Installing WORLD v0.0.1
INFO: Building WORLD
INFO: Attempting to Create directory /home/idunning/pkgtest/.julia/v0.4/WORLD/deps/downloads
INFO: Downloading file https://github.com/r9y9/WORLD/archive/v0.1.4_2_1.tar.gz
INFO: Done downloading file https://github.com/r9y9/WORLD/archive/v0.1.4_2_1.tar.gz
INFO: Attempting to Create directory /home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src
INFO: Attempting to Create directory /home/idunning/pkgtest/.julia/v0.4/WORLD/deps
INFO: Directory /home/idunning/pkgtest/.julia/v0.4/WORLD/deps already created
INFO: Attempting to Create directory /home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src/WORLD-0.1.4_2_1
INFO: Changing Directory to /home/idunning/pkgtest/.julia/v0.4/WORLD/deps/src/WORLD-0.1.4_2_1
================================[ ERROR: WORLD ]================================

LoadError: failed process: Process(`./waf configure --prefix=/home/idunning/pkgtest/.julia/v0.4/WORLD/deps/usr`, ProcessExited(2)) [2]
while loading /home/idunning/pkgtest/.julia/v0.4/WORLD/deps/build.jl, in expression starting on line 30

================================================================================

================================[ BUILD ERRORS ]================================

WARNING: WORLD had build errors.

 - packages with build errors remain installed in /home/idunning/pkgtest/.julia/v0.4
 - build the package(s) and all dependencies with `Pkg.build("WORLD")`
 - build a single package by running its `deps/build.jl` script

================================================================================
INFO: Package database updated
INFO: METADATA is out-of-date a you may not have the latest version of WORLD
INFO: Use `Pkg.update()` to get the latest versions of your packages

>>> 'using WORLD' log
Julia Version 0.4.0-dev+2736
Commit a3485dd (2015-01-16 03:36 UTC)
Platform Info:
  System: Linux (x86_64-unknown-linux-gnu)
  CPU: Intel(R) Xeon(R) CPU E5-2650 0 @ 2.00GHz
  WORD_SIZE: 64
  BLAS: libopenblas (USE64BITINT DYNAMIC_ARCH NO_AFFINITY Sandybridge)
  LAPACK: libopenblas
  LIBM: libopenlibm
  LLVM: libLLVM-3.3

ERROR: LoadError: LoadError: WORLD not properly installed. Please run Pkg.build("WORLD")
 in error at error.jl:19
 in include at ./boot.jl:248
 in include_from_node1 at ./loading.jl:128
 in reload_path at ./loading.jl:152
 in _require at ./loading.jl:67
 in require at ./loading.jl:52
 in include at ./boot.jl:248
 in include_from_node1 at loading.jl:128
 in process_options at ./client.jl:312
 in _start at ./client.jl:396
while loading /home/idunning/pkgtest/.julia/v0.4/WORLD/src/WORLD.jl, in expression starting on line 32
while loading /home/idunning/pkgtest/.julia/v0.4/WORLD/testusing.jl, in expression starting on line 2

>>> test log
no tests to run
>>> end of log
